@@ -23,6 +23,23 @@ function Uninstall-Certificate
 
     To uninstall a certificate from a remote computer, use the `Session`parameter, which was added in Carbon 2.1.0. You can create a new session with the `New-PSSession` cmdlet.
 
+    You can uninstall a certificate using just its thumbprint (this functionality is new in Carbon 2.5.0). `Uninstall-Certificate` will search through all certificate locations and stores and uninstall all certificates that have the thumbprint. When you enumerate all certificates over a remoting session, you get a terminating `The system cannot open the device or file specified` error, so you can't delete a certificate with just a thumbprint over remoting.
+
+    .EXAMPLE
+    Uninstall-Certificate -Thumbprint 570895470234023dsaaefdbcgbefa
+
+    Demonstrates how to delete a certificate from all stores it is installed in. `Uninstall-Certificate` searches every certificate stores and deletes all certificates with the given thumbprint. This functionality was added in Carbon 2.5.0.
+
+    .EXAMPLE
+    '570895470234023dsaaefdbcgbefa' | Uninstall-Certificate
+
+    Demonstrates that you can pipe a thumbprint to `Uninstall-Certificate`. The certificate is uninstall from all stores it is in. This functionality was added in Carbon 2.5.0.
+
+    .EXAMPLE
+    Get-Item -Path 'cert:\LocalMachine\My\570895470234023dsaaefdbcgbefa' | Uninstall-Certificate
+
+    Demonstrates that you can pipe a certificate `Uninstall-Certificate`. The certificate is uninstalled from all stores it is in. This functionality was added in Carbon 2.5.0.
+
     .EXAMPLE
     > Uninstall-Certificate -Thumbprint 570895470234023dsaaefdbcgbefa -StoreLocation CurrentUser -StoreName My
     
@@ -44,12 +61,15 @@ function Uninstall-Certificate
     
     Demonstrates how to uninstall a certificate from a remote computer.
     #>
-    [CmdletBinding(SupportsShouldProcess=$true)]
+    [CmdletBinding(SupportsShouldProcess=$true,DefaultParameterSetName='ByThumbprint')]
     param(
+        [Parameter(Mandatory=$true,ParameterSetName='ByThumbprint',ValueFromPipelineByPropertyName=$true,ValueFromPipeline=$true)]
         [Parameter(Mandatory=$true,ParameterSetName='ByThumbprintAndStoreName')]
         [Parameter(Mandatory=$true,ParameterSetName='ByThumbprintAndCustomStoreName')]
         [string]
         # The thumbprint of the certificate to remove.
+        #
+        # If you want to uninstall the certificate from all stores it is installed in, you can pipe the thumbprint to this parameter or you can pipe a certificate object. (This functionality was added in Carbon 2.5.0.)
         $Thumbprint,
         
         [Parameter(Mandatory=$true,ParameterSetName='ByCertificateAndStoreName')]
@@ -58,7 +78,10 @@ function Uninstall-Certificate
         # The certificate to remove
         $Certificate,
         
-        [Parameter(Mandatory=$true)]
+        [Parameter(Mandatory=$true,ParameterSetName='ByThumbprintAndStoreName')]
+        [Parameter(Mandatory=$true,ParameterSetName='ByThumbprintAndCustomStoreName')]
+        [Parameter(Mandatory=$true,ParameterSetName='ByCertificateAndStoreName')]
+        [Parameter(Mandatory=$true,ParameterSetName='ByCertificateAndCustomStoreName')]
         [Security.Cryptography.X509Certificates.StoreLocation]
         # The location of the certificate's store.
         $StoreLocation,
@@ -75,103 +98,134 @@ function Uninstall-Certificate
         # The name of the non-standard, custom store where the certificate should be un-installed.
         $CustomStoreName,
 
+        [Parameter(ParameterSetName='ByThumbprintAndStoreName')]
+        [Parameter(ParameterSetName='ByThumbprintAndCustomStoreName')]
+        [Parameter(ParameterSetName='ByCertificateAndStoreName')]
+        [Parameter(ParameterSetName='ByCertificateAndCustomStoreName')]
         [Management.Automation.Runspaces.PSSession[]]
         # Use the `Session` parameter to uninstall a certificate on remote computer(s) using PowerShell remoting. Use `New-PSSession` to create a session.
+        #
+        # Due to a bug in PowerShell, you can't remove a certificate by just its thumbprint over remoting. Using just a thumbprint requires us to enumerate through all installed certificates. When you do this over remoting, PowerShell throws a terminating `The system cannot open the device or file specified` error.
         #
         # This parameter was added in Carbon 2.1.0.
         $Session
     )
     
-    Set-StrictMode -Version 'Latest'
-
-    Use-CallerPreference -Cmdlet $PSCmdlet -Session $ExecutionContext.SessionState
-
-    if( $PSCmdlet.ParameterSetName -like 'ByCertificate*' )
+    process
     {
-        $Thumbprint = $Certificate.Thumbprint
-    }
-    
-    $invokeCommandParameters = @{}
-    if( $Session )
-    {
-        $invokeCommandParameters['Session'] = $Session
-    }
-
-    Invoke-Command @invokeCommandParameters -ScriptBlock {
-        [CmdletBinding()]
-        param(
-            [string]
-            # The thumbprint of the certificate to remove.
-            $Thumbprint,
-        
-            [Security.Cryptography.X509Certificates.StoreLocation]
-            # The location of the certificate's store.
-            $StoreLocation,
-        
-            # The name of the certificate's store.
-            $StoreName,
-
-            [string]
-            # The name of the non-standard, custom store where the certificate should be un-installed.
-            $CustomStoreName
-        )
-
         Set-StrictMode -Version 'Latest'
 
-        if( $CustomStoreName )
+        Use-CallerPreference -Cmdlet $PSCmdlet -Session $ExecutionContext.SessionState
+
+        if( $PSCmdlet.ParameterSetName -like 'ByCertificate*' )
         {
-            $storeNamePath = $CustomStoreName
+            $Thumbprint = $Certificate.Thumbprint
         }
-        else
+    
+        $invokeCommandParameters = @{}
+        if( $Session )
         {
-            $storeNamePath = $StoreName
-            if( $StoreName -eq [Security.Cryptography.X509Certificates.StoreName]::CertificateAuthority )
-            {
-                $storeNamePath = 'CA'
-            }
+            $invokeCommandParameters['Session'] = $Session
         }
 
-        $certPath = Join-Path -Path 'Cert:\' -ChildPath $StoreLocation
-        $certPath = Join-Path -Path $certPath -ChildPath $storeNamePath
-        $certPath = Join-Path -Path $certPath -ChildPath $Thumbprint
-
-        if( -not (Test-Path -Path $certPath -PathType Leaf) )
+        if( $PSCmdlet.ParameterSetName -eq 'ByThumbprint' )
         {
-            Write-Debug -Message ('Certificate {0} not found.' -f $certPath)
+            Get-ChildItem -Path 'cert:' -Recurse |
+                Where-Object { -not $_.PsIsContainer } |
+                Where-Object { $_.Thumbprint -eq $Thumbprint } |
+                ForEach-Object {
+                    $cert = $_
+                    $description = $cert.FriendlyName
+                    if( -not $description )
+                    {
+                        $description = $cert.Subject
+                    }
+
+                    $certPath = $_.PSPath | Split-Path -NoQualifier
+                    Write-Verbose ('Uninstalling certificate ''{0}'' ({1}) at {2}.' -f $description,$cert.Thumbprint,$certPath)
+                    $_
+                } |
+                Remove-Item
             return
         }
 
-        $cert = Get-Item -Path $certPath
+        Invoke-Command @invokeCommandParameters -ScriptBlock {
+            [CmdletBinding()]
+            param(
+                [string]
+                # The thumbprint of the certificate to remove.
+                $Thumbprint,
+        
+                [Security.Cryptography.X509Certificates.StoreLocation]
+                # The location of the certificate's store.
+                $StoreLocation,
+        
+                # The name of the certificate's store.
+                $StoreName,
 
-        if( $CustomStoreName )
-        {
-            $store = New-Object 'Security.Cryptography.X509Certificates.X509Store' $CustomStoreName,$StoreLocation
-        }
-        else
-        {
-            $store = New-Object 'Security.Cryptography.X509Certificates.X509Store' ([Security.Cryptography.X509Certificates.StoreName]$StoreName),$StoreLocation
-        }
+                [string]
+                # The name of the non-standard, custom store where the certificate should be un-installed.
+                $CustomStoreName
+            )
 
-        $store.Open( ([Security.Cryptography.X509Certificates.OpenFlags]::ReadWrite) )
+            Set-StrictMode -Version 'Latest'
 
-        try
-        {
-            $target = $cert.FriendlyName
-            if( -not $target )
+            if( $CustomStoreName )
             {
-                $target = $cert.Subject
+                $storeNamePath = $CustomStoreName
+            }
+            else
+            {
+                $storeNamePath = $StoreName
+                if( $StoreName -eq [Security.Cryptography.X509Certificates.StoreName]::CertificateAuthority )
+                {
+                    $storeNamePath = 'CA'
+                }
             }
 
-            if( $PSCmdlet.ShouldProcess( ("certificate {0} ({1})" -f $certPath,$target), "remove" ) )
+            $certPath = Join-Path -Path 'Cert:\' -ChildPath $StoreLocation
+            $certPath = Join-Path -Path $certPath -ChildPath $storeNamePath
+            $certPath = Join-Path -Path $certPath -ChildPath $Thumbprint
+
+            if( -not (Test-Path -Path $certPath -PathType Leaf) )
             {
-                $store.Remove( $cert )
+                Write-Debug -Message ('Certificate {0} not found.' -f $certPath)
+                return
             }
-        }
-        finally
-        {
-            $store.Close()
-        }
-    } -ArgumentList $Thumbprint,$StoreLocation,$StoreName,$CustomStoreName
+
+            $cert = Get-Item -Path $certPath
+
+            if( $CustomStoreName )
+            {
+                $store = New-Object 'Security.Cryptography.X509Certificates.X509Store' $CustomStoreName,$StoreLocation
+            }
+            else
+            {
+                $store = New-Object 'Security.Cryptography.X509Certificates.X509Store' ([Security.Cryptography.X509Certificates.StoreName]$StoreName),$StoreLocation
+            }
+
+            $store.Open( ([Security.Cryptography.X509Certificates.OpenFlags]::ReadWrite) )
+
+            try
+            {
+                $target = $cert.FriendlyName
+                if( -not $target )
+                {
+                    $target = $cert.Subject
+                }
+
+                if( $PSCmdlet.ShouldProcess( ("certificate {0} ({1})" -f $certPath,$target), "remove" ) )
+                {
+                    Write-Verbose ('Uninstalling certificate ''{0}'' ({1}) at {2}.' -f $target,$cert.Thumbprint,$certPath)
+                    $store.Remove( $cert )
+                }
+            }
+            finally
+            {
+                $store.Close()
+            }
+        } -ArgumentList $Thumbprint,$StoreLocation,$StoreName,$CustomStoreName
+    }
 }
 
 Set-Alias -Name 'Remove-Certificate' -Value 'Uninstall-Certificate'
